2008-08-28  Nick Clifton  <nickc@redhat.com>

	* config/mcore/mcore.h (IRA_COVER_CLASSES): Define.

	* config/iq2000/iq2000.h (IRA_COVER_CLASSES): Define.

	* config/fr30/fr30.h (IRA_COVER_CLASSES): Define.

	* config/m32r/m32r.h (IRA_COVER_CLASSES): Define.

2008-08-28  Paul Brook  <paul@codesourcery.com>

	* config/arm/vfp11.md: Update license notice.
	* config/arm/cortex-r4.md: Ditto.

2008-08-28  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37207
	* tree-ssa-ifcombine.c (recognize_single_bit_test): Fix
	tuplification bug.

2008-08-28  Dodji Seketeli  <dodji@redhat.com>

	PR c++/36741
	* tree.c (int_fits_type_p): Don't forget unsigned integers
	  of type sizetype which higher end word equals -1.

2008-08-28  Ira Rosen  <irar@il.ibm.com>

	* target.h (struct vectorize): Add new target builtin.
	* tree-vectorizer.c (destroy_loop_vec_info): Call 
	vect_free_slp_instance instead of vect_free_slp_node.
	* tree-vectorizer.h (enum slp_load_perm_type): New.
	(struct _slp_instance): Add new fields.
	(SLP_INSTANCE_LOAD_PERMUTATION): New.
	(SLP_INSTANCE_LOADS): New.
	(vect_free_slp_tree): Remove.
	(vect_free_slp_instance): Declare.        
	(SLP_TREE_LOADS_PERM_TYPE, TARG_VEC_PERMUTE_COST): New.
	(vectorizable_load): Add argument.
	(vect_transform_slp_perm_load): New.
	* tree-vect-analyze.c (vect_analyze_operations): Add an argument to 
	vectorizable_load.
	(vect_get_place_in_interleaving_chain): New function.
	(vect_free_slp_tree): Make static.
	(vect_free_slp_instance): New function.
	(vect_build_slp_tree): Add new arguments. Allow load permutations and 
	collect the load location in the interleaving chain.
	(vect_supported_slp_permutation_p): New function.
	(vect_supported_load_permutation_p): Likewise.
	(vect_analyze_slp_instance): In case of loads permutation, call
	vect_supported_load_permutation_p to check that the permutation is 
	supported.
	* target-def.h (TARGET_VECTORIZE_BUILTIN_VEC_PERM): New.