@@ -1563,7 +1563,7 @@
 
 (define_insn "return"
   [(return)]
-  "reload_completed && compute_frame_size (get_frame_size (), (long *)0) == 0"
+  "reload_completed"
   "jmp [r31]"
   [(set_attr "length" "2")
    (set_attr "cc" "none")])
